edit build-script